--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
         "express": "^4.19.2",
         "express-rate-limit": "^7.4.0",
         "helmet": "^7.1.0",
+        "httperrors": "^2.3.0",
+        "ip": "^2.0.1",
         "mongoose": "^8.6.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/ip": "^1.1.3",
         "@types/node": "^22.5.3",
         "eslint": "^9.9.1",
         "eslint-config-prettier": "^9.1.0",
